testsuite/tests/grammar/invalid_token_node/derive_trait/test.lkt
from common import FooNode, Identifier

@abstract
class BaseExample: FooNode {
    @parse_field
    f: Identifier
}

class Example: BaseExample implements TokenNode {
}
